--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 dotenv = "0.15.0"
 regex = "1.10.6"
+dirs = "5.0.1"
+colored = "2.1.0"
 
 [dev-dependencies]
 assert_cmd = "2.0"
