--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ dotenv = "0.15.0"
 regex = "1.10.6"
 dirs = "5.0.1"
 colored = "2.1.0"
+rustyline = "14.0.0"
 
 [dev-dependencies]
 assert_cmd = "2.0"
