--- a/.gptsh_config
+++ b/.gptsh_config
@@ -1,4 +1,3 @@
-You are working in a development environment where most projects are written in Rust.
-The source code is located in the 'src' directory.
-Use `cargo` commands for building and testing Rust projects.
-When the user askes to make a commit remember to run git add . first so all the changed files will be commited.
+{
+  "context": "You are working in a development environment where most projects are written in Rust.\nThe source code is located in the 'src' directory.\nUse `cargo` commands for building and testing Rust projects.\nWhen the user asks to make a commit, remember to run `git add .` first so all the changed files will be committed."
+}
